[package]
name = "teensy-rs-workbench"
version = "0.1.0"
edition = "2021"

[dependencies]
rtic = { version = "2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1", default-features = false, features = ["cortex-m-systick"] }

teensy4-panic = { version = "0.2", features = ["log"] }
usbd-audio = { version = "0.2" }
usb-device = { version = "0.3.2", features = ["control-buffer-256"] }
micromath = "2.1.0"
libm = "0.2.11"
imxrt-hal = { path= "/home/hendrik/Programs/rust_embedded/imxrt-hal-clean/", features = ["imxrt1060"] }
usbd-serial = "0.2.2"
imxrt-log = { path= "/home/hendrik/Programs/rust_embedded/imxrt-hal-clean/logging/"}
imxrt-iomuxc = { version = "0.3.0", features = ["imxrt1060"] }
defmt = "0.3.10"
defmt-rtt = "0.4.1"
log = "0.4.25"


[dependencies.teensy4-bsp]
path = "/home/hendrik/Programs/rust_embedded/teensy4-rs"
features = [
    # Use the BSP's runtime.
    "rt",
]
[dev-dependencies]
embedded-hal-mock = "0.9"

[features]
default = []
test-utilities = []
testing = []
# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0

[[bin]]
name = "blink"
path = "src/bin/blink.rs"

[[bin]]
name = "template"
path = "src/bin/template.rs"

[[bin]]
name = "usb_mic_sine"
path = "src/bin/usb_mic_sine.rs"

[[bin]]
name = "usb_mic_v2"
path = "src/bin/usb_mic_v2.rs"
